--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ legend {
 label {
     display: block;
     margin-top: 10px;
+    font-size: 16px;
 }
 
 input,
@@ -58,11 +59,12 @@ select {
 textarea {
     font-size: 14px;
     font-family: Arial, sans-serif;
-    width: 70%;
+    width: 30%;
     padding: 10px;
     margin-top: 15px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    height: 60px;
 }
 
 .container button {
@@ -87,7 +89,7 @@ button {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 30%;
+    width: 20%;
     background-color: #111874;
 }
 
@@ -194,14 +196,9 @@ textarea {
     text-transform: uppercase;
 }
 
-.img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 20px;
-    /* Ajusta a largura máxima */
-    height: auto;
-    /* Mantém a proporção da imagem */
+img {
+    display: inline-block;
+    margin: 0 20px 20px 0;
 }
 
 @media print {
@@ -235,4 +232,171 @@ textarea {
     #imprimirConcluidos {
         display: none;
     }
+}
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    width: 80%;
+    margin: 50px auto;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+
+}
+
+h1 {
+    text-align: center;
+    color: #0a59c0;
+    margin-bottom: 30px;
+}
+
+nav a {
+    text-decoration: none;
+    color: #ffffff;
+    margin: 0 15px;
+    font-weight: bold;
+}
+
+nav a:hover {
+    text-decoration: none;
+}
+
+.form-row {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.form-column {
+    flex: 1;
+    margin: 10px;
+    padding: 15px;
+    background-color: #f9f9f9;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.form-group,
+.form-area,
+select,
+button {
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+label {
+    font-weight: bold;
+    margin-bottom: 5px;
+    display: block;
+    font-family: 'Courier New', Courier, monospace;
+    color: #000000;
+}
+
+input[type="text"],
+textarea,
+select {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+    box-sizing: border-box;
+    width: 100%;
+}
+
+input[type="file"] {
+    padding: 8px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+    box-sizing: border-box;
+    background-color: #fff;
+    width: 90%;
+}
+
+textarea {
+    resize: vertical;
+    min-height: 100px;
+    width: 100%;
+}
+
+button {
+    background-color: #007BFF;
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+
+.proto {
+    background-color: #f5f5f5;
+    border: none;
+    font-family: 'Courier New', Courier, monospace;
+    color: #000000;
+}
+
+legend {
+    font-family: 'Courier New', Courier, monospace;
+    color: #000000;
+    font-size: 12px;
+}
+
+footer {
+    background-color: #f4f4f4;
+    color: rgb(0, 0, 0);
+    padding: 10px;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    font-size: 12px;
+    font-family: Arial, sans-serif;
+}
+
+.login-container {
+    max-width: 400px;
+    margin: 100px auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 15px;
+    background-color: #f9f9f9;
+}
+
+.login-container h1 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+.login-btn {
+    width: 100%;
+    padding: 10px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.login-btn:hover {
+    background-color: #0056b3;
+}
+
+h1 {
+    font-size: 20px;
 }
