--- a/styles.css
+++ b/styles.css
@@ -199,6 +199,7 @@ textarea {
 img {
     display: inline-block;
     margin: 0 20px 20px 0;
+    padding: 6px;
 }
 
 @media print {
@@ -245,15 +246,16 @@ body {
     width: 80%;
     margin: 50px auto;
     background-color: #fff;
-    padding: 20px;
+    padding: 10px;
     border-radius: 8px;
+    margin-bottom: auto;
 
 }
 
 h1 {
     text-align: center;
     color: #0a59c0;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 nav a {
@@ -276,10 +278,11 @@ nav a:hover {
 .form-column {
     flex: 1;
     margin: 10px;
-    padding: 15px;
+    padding: 10px;
     background-color: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    margin-bottom: auto;
 }
 
 .form-group,
@@ -304,7 +307,7 @@ select {
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
-    font-size: 14px;
+    font-size: 13px;
     box-sizing: border-box;
     width: 100%;
 }
@@ -313,7 +316,7 @@ input[type="file"] {
     padding: 8px;
     border-radius: 5px;
     border: 1px solid #ccc;
-    font-size: 16px;
+    font-size: 13px;
     box-sizing: border-box;
     background-color: #fff;
     width: 90%;
